PF-534: Workspace name and description. (#49)
Co-authored-by: John Czerkowicz <jczerk@verily.com>